--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "debug": "^2.2.0",
     "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.11.3"
+    "grunt-contrib-jshint": "^0.11.3",
+    "knuth-shuffle": "^1.0.1"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
