--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "debug": "^2.2.0",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.11.3",
-    "knuth-shuffle": "^1.0.1"
+    "knuth-shuffle": "^1.0.1",
+    "moment": "^2.10.6"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
