--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Some problems solved with genetic algorithms for an AI class",
   "main": "src/app.js",
   "dependencies": {
+    "csv": "^0.4.6",
+    "csv-parse": "^1.0.0",
     "debug": "^2.2.0",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.11.3",
